--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -16,5 +16,9 @@ html {
   /*-------------Global Styles----------*/ 
 
   body{
-    
+    font-family: "Gabarito", sans-serif;
   }
+
+header.primary{ 
+
+}
