--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -35,7 +35,7 @@ margin:0;
 }
 
 header.primary {
-background-color: #3b638b;
+background-color: green;
 color:#ffffff; 
 text-align:center;  
 text-shadow:2px 2px #000000;
@@ -102,12 +102,12 @@ header.primary nav a:hover{
 }
 
 #content h2{
-  color: #07e1f5;
+  color: green;
   border-bottom:2px dotted #c0c0c0
 }
 
 #content h3{
-border: 7.5px dotted #07e1f5; 
+border: 7.5px dotted greenyellow; 
 padding: 7.59x;
 
 }
@@ -142,7 +142,7 @@ margin:0;
   margin: 0;
 }
 #blog h2 a{ 
-  color: #07e1f5;
+  color: green;
 }
 #blog .post:hover{ 
   box-shadow: 0 8px 16px rgba(0,0,0,6);
