--- a/spacex-dragon-redo/assets/css/style.css
+++ b/spacex-dragon-redo/assets/css/style.css
@@ -211,4 +211,37 @@ Section#columns .container h2{
   color:white;
   margin:0;
 }
- 
+ /*---Table---*/
+ section#columns {
+  background: url(https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihZDNc0_hKdrRNR0vgj6VWwhaRhGs7u5IySs0FJfcV5NYn6b0e30TP_uT1BeogRgz73V7TkyHTsf7CpNoyAcyeNa8WOWpSzqpbBMa34BVaWCmzkStW9hDcUb9-GVXWhK=w639-h909-v0);
+    background-size: 100vw 220vh;
+ background-repeat: no-repeat;
+    position:relative;
+ text-align:center;  
+ padding:20px 20px 20px 20px;
+ }
+ Section#columns .container{
+   display:flex;
+   flex-direction:column;
+   justify-content:space-between;
+   flex:wrap;
+   border: 1px solid black;
+   padding: 0 0 4em 0; 
+   background:white;
+   border-radius:25px;
+ }
+ Section#columns .container h2{
+   flex:0 0 100%;
+   margin:0;
+   display:block;
+   color:#33536b;
+   text-align
+   :center;
+     font-family: sans-serif;
+   font-size:2em;
+   text-shadow: 1px 1px black;
+   text-decoration:underline;
+ }
+ section#columns .info table,th,td{
+   border:1px solid black;
+ }
