--- a/spacex-dragon-redo/assets/css/style.css
+++ b/spacex-dragon-redo/assets/css/style.css
@@ -131,6 +131,12 @@ section#content h2 {
   color: #33536b;
   text-align: center;
 }
+section#content h3 {
+  font-family: sans-serif; cursive
+  font-size:2.2em;
+   color: black;
+   text-align: center;
+ }
 /*---columns---*/
   section#columns {
  background: url(https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihZDNc0_hKdrRNR0vgj6VWwhaRhGs7u5IySs0FJfcV5NYn6b0e30TP_uT1BeogRgz73V7TkyHTsf7CpNoyAcyeNa8WOWpSzqpbBMa34BVaWCmzkStW9hDcUb9-GVXWhK=w639-h909-v0);
@@ -212,7 +218,7 @@ Section#columns .container h2{
   margin:0;
 }
  /*---Table---*/
- section#columns {
+ section#table  {
   background: url(https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihZDNc0_hKdrRNR0vgj6VWwhaRhGs7u5IySs0FJfcV5NYn6b0e30TP_uT1BeogRgz73V7TkyHTsf7CpNoyAcyeNa8WOWpSzqpbBMa34BVaWCmzkStW9hDcUb9-GVXWhK=w639-h909-v0);
     background-size: 100vw 220vh;
  background-repeat: no-repeat;
@@ -220,7 +226,7 @@ Section#columns .container h2{
  text-align:center;  
  padding:20px 20px 20px 20px;
  }
- Section#columns .container{
+ Section#table  .container{
    display:flex;
    flex-direction:column;
    justify-content:space-between;
@@ -230,7 +236,7 @@ Section#columns .container h2{
    background:white;
    border-radius:25px;
  }
- Section#columns .container h2{
+ Section#table  .container h2{
    flex:0 0 100%;
    margin:0;
    display:block;
@@ -242,6 +248,6 @@ Section#columns .container h2{
    text-shadow: 1px 1px black;
    text-decoration:underline;
  }
- section#columns .info table,th,td{
+ section#table  .info table,th,td{
    border:1px solid black;
  }
