--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,3 +35,13 @@ nav li{
   color:blue;
   font-size:1.5em; 
 }
+section#content h2 {
+  font-family: sans-serif; cursive
+  font-size:2.2em;
+   color: blue;
+   text-align: center;
+ }
+ section#content h2{
+   text-align:center;
+   
+ }
