--- a/spacex-dragon-redo revisoin/assets/css/style.css
+++ b/spacex-dragon-redo revisoin/assets/css/style.css
@@ -255,3 +255,23 @@ Section#columns .container h2{
   overflow:scroll;
   height:100px;
  }
+
+
+ .dragon-autoplay-toggle-button,
+ .dragon-k-prev .dragon-prev-icon, .dragon-next .dragon-next-icon,
+ .dragon-dots li button .dragon-dot-icon,
+ .dragon-dots li.dragon-active button .dragon-dot-icon {
+  color: white;
+}
+
+/* Customize Previous/Next/Dots/Autoplay - Active State */
+
+.dragon-next:focus .dragon-next-icon,
+.dragon-next:focus .dragon-prev-icon,
+.dragon-prev:focus .dragon-next-icon,
+.dragon-prev:focus .dragon-prev-icon,
+.dragon-dots li button:focus .dragon-dot-icon:before,
+.dragon-dots li.dragon-active button:focus .dragon-dot-icon,
+.dragon-autoplay-toggle-button:focus 
+{
+    color:black;
