changing button color

--- a/spacex-dragon-redo revisoin/assets/css/style.css
+++ b/spacex-dragon-redo revisoin/assets/css/style.css
@@ -258,7 +258,7 @@ Section#columns .container h2{
 .slick-prev .slick-prev-icon, .slick-next .slick-next-icon,
 .slick-dots li button .slick-dot-icon,
 .slick-dots li.slick-active button .slick-dot-icon {
-  color: white;
+  color: black;
 }
 
 /* Customize Previous/Next/Dots/Autoplay - Active State */
