--- a/spacex-dragon-redo revisoin/assets/css/style.css
+++ b/spacex-dragon-redo revisoin/assets/css/style.css
@@ -139,7 +139,7 @@ section#content h3 {
  }
 /*---columns---*/
   section#columns {
- background: url(https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihZDNc0_hKdrRNR0vgj6VWwhaRhGs7u5IySs0FJfcV5NYn6b0e30TP_uT1BeogRgz73V7TkyHTsf7CpNoyAcyeNa8WOWpSzqpbBMa34BVaWCmzkStW9hDcUb9-GVXWhK=w639-h909-v0);
+ background: "/assets/img/dragon-in-space.jpg";
    background-size: 100vw 220vh;
 background-repeat: no-repeat;
    position:relative;
@@ -168,7 +168,7 @@ Section#columns .container h2{
   
 }
 #columns article.info{
-   background-color: white;
+   color: white;
   padding:10px 10px 10px 10px;
   margin:5px;
   border-radius:25px;
