--- a/spacex-dragon-redo revisoin/assets/css/style.css
+++ b/spacex-dragon-redo revisoin/assets/css/style.css
@@ -139,7 +139,7 @@ section#content h3 {
  }
 /*---columns---*/
   section#columns {
-    background: black;
+    background: red;
    background-size: 100vw 220vh;
 background-repeat: no-repeat;
    position:relative;
