--- a/spacex-dragon-redo revisoin/assets/css/style.css
+++ b/spacex-dragon-redo revisoin/assets/css/style.css
@@ -139,7 +139,7 @@ section#content h3 {
  }
 /*---columns---*/
   section#columns {
-    background: red;
+    background: black;
    background-size: 100vw 220vh;
 background-repeat: no-repeat;
    position:relative;
@@ -153,7 +153,7 @@ Section#columns .container{
   flex:wrap;
   border: 1px solid black;
   padding: 0 0 4em 0; 
- 
+  background:white;
   border-radius:25px;
 }
 Section#columns .container h2{
@@ -220,7 +220,7 @@ Section#columns .container h2{
 }
  /*---Table---*/
  section#table  {
-  background: url(https://lh3.googleusercontent.com/u/1/drive-viewer/AKGpihZDNc0_hKdrRNR0vgj6VWwhaRhGs7u5IySs0FJfcV5NYn6b0e30TP_uT1BeogRgz73V7TkyHTsf7CpNoyAcyeNa8WOWpSzqpbBMa34BVaWCmzkStW9hDcUb9-GVXWhK=w639-h909-v0);
+ background:black;
     background-size: 100vw 220vh;
  background-repeat: no-repeat;
     position:relative;
