--- a/spacex-dragon-redo revisoin/assets/css/style.css
+++ b/spacex-dragon-redo revisoin/assets/css/style.css
@@ -207,6 +207,7 @@ Section#columns .container h2{
   justify-content:center;
   border-radius:25px;
   border: 2px solid black;
+  width: 4em;
   }
 /*---footer---*/
 #copyright h6{
